--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -48,5 +48,46 @@
 </html>
 
 <p><a href="tweets.html">Check out my tweets</a></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Page Title</title>
+</head>
+<body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <!-- Your page content goes here -->
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Reedge Dangana - <a href="https://github.com/Reedge" target="_blank">here</a></p>
+  </footer>
+</body>
+</html>
+<h1>Welcome to My Homepage</h1>
+<p>This is paragraph one.</p>
+<p>This is paragraph two.</p>
+<p>This is paragraph three.</p>
+<p>This is paragraph four.</p>
+
+<h2>My Skills</h2>
+<h3>Frontend Development</h3>
+
+<a href="https://alxafrica.com" target="_blank">
+  <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+</a>
 
 
