--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -33,5 +33,41 @@
   <p><a href="index.html">Back to Homepage</a></p>
 </body>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Page Title</title>
+</head>
+<body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <!-- Your page content goes here -->
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Reedge Dangana - <a href="https://github.com/Reedge" target="_blank">here</a></p>
+  </footer>
+</body>
+</html>
+<h1>My Embedded Tweet</h1>
+
+<blockquote class="twitter-tweet">
+  <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack)
+  <a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
+</blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
