--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -89,5 +89,75 @@
 <a href="https://alxafrica.com" target="_blank">
   <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
 </a>
+<!-- Learners Table -->
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Country</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John</td>
+      <td>25</td>
+      <td>USA</td>
+    </tr>
+    <tr>
+      <td>Emily</td>
+      <td>28</td>
+      <td>Canada</td>
+    </tr>
+    <tr>
+      <td>Michael</td>
+      <td>32</td>
+      <td>Australia</td>
+    </tr>
+    <tr>
+      <td>Sophia</td>
+      <td>21</td>
+      <td>UK</td>
+    </tr>
+  </tbody>
+</table>
+<article>
+  <h1>Welcome to My Portfolio</h1>
+  <p>This is my personal website where I share my work and thoughts.</p>
+
+  <!-- Learners Table -->
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Country</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>25</td>
+        <td>USA</td>
+      </tr>
+      <tr>
+        <td>Emily</td>
+        <td>28</td>
+        <td>Canada</td>
+      </tr>
+      <tr>
+        <td>Michael</td>
+        <td>32</td>
+        <td>Australia</td>
+      </tr>
+      <tr>
+        <td>Sophia</td>
+        <td>21</td>
+        <td>UK</td>
+      </tr>
+    </tbody>
+  </table>
+</article>
+
 
 
